--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
         </div>
     </section>
 
-    <footer class="pt-5 bg-dark">
+    <!--<footer class="pt-5 bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-4" data-aos="fade-right">
@@ -629,7 +629,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer>-->
 
 
     
